<resources>
    <string name="app_name">Activity Lifecycle App</string>
    <string name="app_welcome">Welcome again!</string>
    <string name="app_comercial_name">Party Marty!</string>
    <string name="app_tittle">All you are looking for</string>
    <string name="app_subtitle">Parties and marties in the city</string>
    <string name="app_start">Get start</string>

    <string name="app_restaurant">Lets go to a restaurant</string>
    <string name="app_cinema">Want to see a movie?</string>
    <string name="app_party">Party is my life!</string>

    <string name="app_opc_a">I am best</string>
    <string name="app_opc_b">I am excelent</string>

    <string name="app_election">Your election is:</string>
    <string name="app_bye">... we are processing your request</string>

    <string name="app_continue">Continue</string>
    <string name="app_restart">Restart</string>
</resources>